2003-09-09  Bruno Haible  <bruno@clisp.org>

	* unix,d (nonintr_open): Add const to first argument.
	* unixaux.d (nonintr_open): Likewise.

2003-09-05  Sam Steingold  <sds@gnu.org>

	* makemake.in (distrib) [cygwin]: create cygwin package

2003-09-05  Wolfgang Jenkner  <wjenkner@inode.at>
	    Sam Steingold  <sds@gnu.org>

	* m4/address.m4, m4/closedir.m4, m4/filecharset.m4, m4/ioctl.m4:
	* m4/mprotect.m4, m4/shm-rmid.m4, m4/shm.m4, m4/shmat.m4:
	eliminated prototypes for better portability

2003-09-04  Sam Steingold  <sds@gnu.org>

	* spvw.d: do not include version.h
	(usage, main/--version, version_string/AMIGA):
	use PACKAGE_NAME & PACKAGE_BUGREPORT
	* misc.d (LISP-IMPLEMENTATION-VERSION): use
	O(lisp_implementation_package_version) instead of
	O(lisp_implementation_version_number_string) and
	O(lisp_implementation_version_date_string)
	* makemake.in: removed version.h
	* constobj.d (lisp_implementation_package_version):
	init to PACKAGE_VERSION
	(lisp_implementation_version_date_string)
	(lisp_implementation_version_number_string): removed
	* configure.in (AC_INIT): the master version is now here,
	not in version.h
	* version.h: removed
	* FILES.1: updated
	* Makefile.devel (src/VERSION): depend on configure, not version.h

2003-09-04  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-object) [SOCKETS]: handle SOCKET-SERVER
	Reported by "John K. Hinsdale" <hin@alma.com>
	* genclisph.d (Atype_32Bit): export for gdi (Dan Stanger)

2003-09-03  Sam Steingold  <sds@gnu.org>

	* makemake.in (distrib) [win32]: distribute both base and full
	(uninstall): RMRF lispdocdir & lisplibdir
	(linkkit): added exporting.lisp & modprep.lisp

2003-09-02  Sam Steingold  <sds@gnu.org>

	* version.h: 2.31 is released

2003-09-02  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	* pathname.d (init_launch_streamarg, make_launch_pipe):
	now defined on UNIX || RISCOS || WIN32_NATIVE.
	(interpret_launch_priority): new local helper function.
	(LAUNCH): UNIX and Windows versions merged.